changes configrations
